--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "winston": "^3.17.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.9"
   }
 }
